--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <a class="dropdown-item" routerLink="/customer">Sien Kliente</a>
-        <a class="dropdown-item" routerLink="/customer-group">Sien Groepe</a>
+        <a class="dropdown-item" routerLink="/customer-group">Bestuur Klient Groepe</a>
         <!-- <a class="dropdown-item" href="#">Something else here</a> -->
         </div>
     </li>
