adding more group management

--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -69,6 +69,9 @@
                 <div class="col">
                     <button type="submit" class="bg-secondary text-light">Sit Klient by Groep</button>
                 </div>
+                <div class="col">
+                    <button (click)="handleCancelAdd()" type="button" class="bg-secondary text-light">Kanselleer</button>
+                </div>
             </div>
             <div class="alert alert-success alert-dismissible" *ngIf="submitCustGroupChangeSuccess">
                 <button (click)="dismissCustGroupChangeSuccess()" class="close" data-dismiss="alert"
