--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -5,11 +5,21 @@
     <div class="container-fluid mx-3 bg-secondary text-light border border-dark rounded">
         <div class="row">
             <div class="col form-group">
-                <label for="selectCustomer">Select Customer</label>
+                <label for="selectCustomerGroup">Kies Klient Groep</label>
+                <select (change)="selectChangeCustomerGroupHandler($event)" class="form-control"
+                    id="selectCustomerGroup" formControlName="selectCustomerGroup">
+                    <option value="unselected">--Kies Klient Groep--</option>
+                    <option *ngFor="let group of groups">{{ group.name }}</option>
+                </select>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col form-group">
+                <label for="selectCustomer">Kies Klient</label>
                 <select (change)="selectChangeCustomerHandler($event)" class="form-control" id="selectCustomer"
                     formControlName="selectCustomer">
-                    <option value="">--Select Customer--</option>
-                    <option *ngFor="let customer of customers">{{ customer.name }}</option>
+                    <option value="">--Kies Klient--</option>
+                    <option *ngFor="let customer of customersInGroup">{{ customer.name }}</option>
                 </select>
             </div>
         </div>
@@ -22,7 +32,7 @@
                     <input class="form-check-input" type="radio" (change)="radioChangeHandler($event)" 
                     name="inlineRadioOptions" id="chickenRadio"
                         value="Whole">
-                    <label class="form-check-label" for="chickenRadio">Whole Chickens</label>
+                    <label class="form-check-label" for="chickenRadio">Heel Hoenders</label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" (change)="radioChangeHandler($event)" name="inlineRadioOptions" id="piecesRadio"
@@ -32,7 +42,7 @@
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" (change)="radioChangeHandler($event)" name="inlineRadioOptions" id="offalRadio"
                         value="Offal">
-                    <label class="form-check-label" for="offalRadio">Offal</label>
+                    <label class="form-check-label" for="offalRadio">Afval</label>
                 </div>
             </div>
         </div>
@@ -45,15 +55,15 @@
     <div class="container-fluid mx-3 bg-light border border-dark rounded" *ngIf="wholeChickenSelected">
         <div class="row top-buffer">
             <div class="col">
-                <h6>Whole Chickens</h6>
+                <h6>Heel Hoenders</h6>
             </div>
         </div>
         <div class="row top-buffer">
             <div class="col">
                 <div class="form-group">
-                    <label for="selectChickenSize">Select Size</label>
+                    <label for="selectChickenSize">Kies Grootte</label>
                     <select class="form-control" id="selectChickenSize" formControlName="selectChickenSize">
-                        <option value="">--Select Size--</option>
+                        <option value="">--Kies Grootte--</option>
                         <option *ngFor="let item of wholeSizes">{{ item }}</option>
                     </select>
                 </div>
@@ -61,10 +71,10 @@
 
             <div class="col">
                 <div class="form-group">
-                    <label for="selectChickenQuantity">Select Quantity</label>
+                    <label for="selectChickenQuantity">Kies Hoeveelheid</label>
                     <select class="form-control" id="selectChickenQuantity" formControlName="selectChickenQuantity">
-                        <option value="">--Select Quantity--</option>
-                        <option *ngFor="let n of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]">{{ n }}</option>
+                        <option value="">--Kies Hoeveelheid--</option>
+                        <option *ngFor="let n of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30]">{{ n }}</option>
                     </select>
                 </div>
             </div>
@@ -90,18 +100,18 @@
         </div>
         <div class="row top-buffer">
             <div class="col form-group">
-                <label for="selectPiecesType">Select Product</label>
+                <label for="selectPiecesType">Kies Produk</label>
                 <select (change)="selectChangePiecesTypeHandler($event)" class="form-control"
                     formControlName="selectPiecesType" id="selectPiecesType">
-                    <option value="">--Select Product--</option>
+                    <option value="">--Kies Produk--</option>
                     <option *ngFor="let item of piecesProducts">{{ item }}</option>
                 </select>
             </div>
 
             <div class="col form-group">
-                <label for="selectPiecesSize">Select Size</label>
+                <label for="selectPiecesSize">Kies Grootte</label>
                 <select class="form-control" formControlName="selectPiecesSize" id="selectPiecesSize">
-                    <option value="">--Select Size--</option>
+                    <option value="">--Kies Grootte--</option>
                     <option *ngFor="let item of piecesSizes">{{ item }}</option>
                 </select>
             </div>
@@ -111,20 +121,20 @@
             <div class="col">
                 <div class="form-check form-check-inline">
                     <input type="checkbox" class="form-check-input" formControlName="deboned" id="deboned">
-                    <label class="form-check-label" for="deboned">Deboned</label>
+                    <label class="form-check-label" for="deboned">Ontbeen</label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input type="checkbox" class="form-check-input" formControlName="skinned" id="skinned">
-                    <label class="form-check-label" for="skinned">Skinned</label>
+                    <label class="form-check-label" for="skinned">Ontvel</label>
                 </div>
             </div>
         </div>
 
         <div class="row top-buffer">
             <div class="col form-group">
-                <label for="selectPiecesQuantity">Select Quantity</label>
+                <label for="selectPiecesQuantity">Kies Hoeveelheid</label>
                 <select class="form-control" id="selectPiecesQuantity" formControlName="selectPiecesQuantity">
-                    <option value="">--Select Quantity--</option>
+                    <option value="">--Kies Hoeveelheid--</option>
                     <option *ngFor="let n of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]">{{ n }}</option>
                 </select>
             </div>
@@ -132,7 +142,7 @@
 
         <div class="row top-buffer bottom-buffer">
             <div class="col">
-                <button type="submit" class="bg-secondary text-light">Add</button>
+                <button type="submit" class="bg-secondary text-light">Sit by</button>
             </div>
         </div>
     </div>
@@ -150,18 +160,18 @@
         </div>
         <div class="row top-buffer">
             <div class="col form-group">
-                <label for="selectOffalType">Select Product</label>
+                <label for="selectOffalType">Kies Produk</label>
                 <select (change)="selectChangeOffalTypeHandler($event)" class="form-control"
                     formControlName="selectOffalType" id="selectOffalType">
-                    <option value="">--Select Product--</option>
+                    <option value="">--Kies Produk--</option>
                     <option *ngFor="let item of offalProducts">{{ item }}</option>
                 </select>
             </div>
 
             <div class="col form-group">
-                <label for="selectOffalSize">Select Size</label>
+                <label for="selectOffalSize">Kies Grootte</label>
                 <select class="form-control" formControlName="selectOffalSize" id="selectOffalSize">
-                    <option value="">--Select Size--</option>
+                    <option value="">--Kies Grootte--</option>
                     <option *ngFor="let item of offalSizes">{{ item }}</option>
                 </select>
             </div>
@@ -169,9 +179,9 @@
 
         <div class="row top-buffer">
             <div class="col form-group">
-                <label for="selectOffalQuantity">Select Quantity</label>
+                <label for="selectOffalQuantity">Kies Hoeveelheid</label>
                 <select class="form-control" id="selectOffalQuantity" formControlName="selectOffalQuantity">
-                    <option value="">--Select Quantity--</option>
+                    <option value="">--Kies Hoeveelheid--</option>
                     <option *ngFor="let n of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]">{{ n }}</option>
                 </select>
             </div>
@@ -179,7 +189,7 @@
 
         <div class="row top-buffer bottom-buffer">
             <div class="col">
-                <button type="submit" class="bg-secondary text-light">Add</button>
+                <button type="submit" class="bg-secondary text-light">Sit by</button>
             </div>
         </div>
     </div>
@@ -191,21 +201,21 @@
     <div class="container-fluid mx-3 bg-secondary text-light border border-dark rounded">
         <div class="row top-buffer">
             <div class="col">
-                <h6>Summary</h6>
+                <h6>Opsomming</h6>
             </div>
         </div>
 
         <div class="alert alert-danger alert-dismissible" *ngIf="submitWithoutCustomer">
             <button (click)="dismissSubmitWithoutCustomer()" class="close" data-dismiss="alert"
                 aria-label="close">&times;</button>
-            <strong>Please select a customer before submitting order</strong>
+            <strong>Kies asb n klient</strong>
         </div>
 
         <div class="row top-buffer">
             <div class="col">
                 <label class="font-weight-bold">Customer</label>
                 <br />
-                <span *ngIf="!customerSelected" class="text-warning">Please select a customer above</span>
+                <span *ngIf="!customerSelected" class="text-warning">Kies asb 'n Klient bo</span>
                 <span *ngIf="customerSelected">{{ customerForm.controls.selectCustomer.value }}</span>
             </div>
         </div>
@@ -215,12 +225,12 @@
                 <table class="table text-light">
                     <thead>
                         <tr>
-                            <th scope="col">Product</th>
-                            <th scope="col">Size</th>
-                            <th scope="col">Quantity</th>
-                            <th scope="col">Deboned</th>
-                            <th scope="col">Skinned</th>
-                            <th scope="col">Remove</th>
+                            <th scope="col">Produk</th>
+                            <th scope="col">Grootte</th>
+                            <th scope="col">Hoeveelheid</th>
+                            <th scope="col">Ontbeen</th>
+                            <th scope="col">Ontvel</th>
+                            <th scope="col">Verwyder</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -230,7 +240,7 @@
                             <td>{{ order.quantity }}</td>
                             <td>{{ order.deboned }}</td>
                             <td>{{ order.skinned }}</td>
-                            <td><button (click)="handleRemove(order)" type=”button”>Remove</button></td>
+                            <td><button (click)="handleRemove(order)" type=”button”>Verwyder</button></td>
                         </tr>
                     </tbody>
                 </table>
@@ -239,13 +249,13 @@
 
         <div class="row top-buffer bottom-buffer">
             <div class="col">
-                <button type="submit">Submit</button>
+                <button type="submit">Sit Bestelling In</button>
             </div>
         </div>
 
         <div class="alert alert-success alert-dismissible" *ngIf="submitSuccess">
             <a href="/order" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-            <strong>Success!</strong>
+            <strong>Sukses!</strong>
         </div>
 
         <!-- <div class="alert alert-danger alert-dismissible" *ngIf="!submitSuccess">
